# peft

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  setup.py
examples/causal_language_modeling/: peft_lora_clm_accelerate_ds_zero3_offload.py  requirements.txt
examples/conditional_generation/: peft_lora_seq2seq_accelerate_ds_zero3_offload.py  peft_lora_seq2seq_accelerate_fsdp.py
examples/int8_training/: Finetune_opt_bnb_peft.ipynb
examples/lora_dreambooth/: requirements.txt
examples/sequence_classification/: requirements.txt
examples/token_classification/: requirements.txt
src/peft/: __init__.py  peft_model.py
src/peft/tuners/: lora.py
src/peft/utils/: config.py
tests/: test_save_and_load.py
